syntax = "proto3";

package integration.grpc.test;

option java_package = "org.springframework.integration.grpc.proto";

option java_multiple_files = true;

option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service TestHelloWorld {

  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}

  // Sends a greeting and something else
  rpc StreamSayHello(HelloRequest) returns (stream HelloReply) {}

  // Sends a greeting to everyone presenting
  rpc HelloToEveryOne(stream HelloRequest) returns (HelloReply) {}

  // Streams requests and replies
  rpc BidiStreamHello(stream HelloRequest) returns (stream HelloReply) {}

  // Fail with error
  rpc ErrorOnHello(HelloRequest) returns (HelloReply) {}

}

// The request message containing the user's name.
message HelloRequest {

  string name = 1;

}

// The response message containing the greetings
message HelloReply {

  string message = 1;

}